# samplax

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: api.rst  conf.py  design.md  ift_sde.md  index.md  quickstart.md
samplax/: __init__.py  base.py  gibbs.py  preconditioners.py  schedules.py
samplax/integrations/: __init__.py  ift_sde.py  nested.py
samplax/transforms/: quant.py
tests/: test_amagold_adapter.py  test_correctness.py  test_ift_adapter.py  test_nested_correction.py  test_schedules_exponential.py  test_vendored_equivalence.py
